--- a/src/app/components/add-doctor/add-doctor.component.html
+++ b/src/app/components/add-doctor/add-doctor.component.html
@@ -1,1 +1,172 @@
-<p>add-doctor works!</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Admin dashboard</title>  
+
+    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;900&family=Ubuntu&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    
+    <!-- Bootstrap Scripts -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+    
+    <style>
+        .w3-sidenav w3-white w3-card-2{
+            background-color: black !important;
+        }
+    </style>
+</head>
+
+  <body>
+
+    <mat-toolbar class="mat-elevation-z8">
+      <button
+        mat-icon-button
+        *ngIf="sidenav.mode === 'over'"
+        (click)="sidenav.toggle()"
+      >
+        <mat-icon *ngIf="!sidenav.opened"> menu </mat-icon>
+        <mat-icon *ngIf="sidenav.opened"> close </mat-icon>
+      </button>
+      <a >HealthEconnect</a>
+      <p class="heading">{{admin_details.adminName}}</p>
+  </mat-toolbar>
+    
+  <mat-sidenav-container>
+    <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
+      <img
+        class="avatar mat-elevation-z8"
+        src="../../../assets/Patient.jpeg"
+      />
+  
+      <h4 class="name">{{admin_details.adminName}}</h4>
+  
+      <mat-divider></mat-divider>
+      
+      <button mat-button class="menu-button" routerLink="/admin-dashboard">
+        <mat-icon>dashboard</mat-icon>
+        <span>Admin-Dashboard</span>
+      </button>
+      <button mat-button class="menu-button" routerLink="/view-doctors">
+        <mat-icon>medical_services</mat-icon>
+        <span>Manage Doctors</span>
+      </button>
+      <button mat-button class="menu-button" routerLink="/view-admins">
+        <mat-icon>admin_panel_settings</mat-icon>
+        <span>Manage Admins</span>
+      </button>
+      <button mat-button class="menu-button" routerLink="/statistics">
+        <mat-icon>insert_chart_outlined</mat-icon>
+        <span>View-Statistics</span>
+      </button>
+        
+      <mat-divider></mat-divider>
+      
+      <button mat-button class="menu-button" (click)="logout()">
+        <mat-icon>exit_to_app</mat-icon>
+        <span>LogOut</span>
+      </button>
+    </mat-sidenav>
+    <mat-sidenav-content  style = "background: url('../../../assets/profiles3.webp')">
+      <div class="doctors-list">
+        
+        <h2 class="list-of-admins"><b>Add a Doctor</b></h2>
+        <br>
+        <br>
+        <h4 class="enter-all-fields"><b>Enter all Fields</b></h4>
+
+        <form [formGroup]="doctorForm" class="center-form" (ngSubmit)="onSubmit()">
+            <div>
+              <label for="name" class="attr-name">Doctor Name:</label>
+              <input formControlName="name" type="text" id="name" name="name" required>
+              <div *ngIf="doctorForm.controls['name'].invalid && doctorForm.controls['name'].touched || doctorForm.controls['name'].errors?.['pattern']" class="alert alert-danger">
+                Name should not be empty and only contains alphabets.
+              </div>
+            </div>
+            <div>
+              <label for="phone" class="attr-name">Mobile number:</label>
+              <input formControlName="ph_no" type="tel" id="phone" name="phone" required>
+              <div *ngIf="doctorForm.controls['ph_no'].invalid && doctorForm.controls['ph_no'].touched || doctorForm.controls['ph_no'].errors?.['pattern']" class="alert alert-danger">
+                Phone number should contain only numbers with length 10
+              </div>
+            </div>
+            <div>
+              <label for="email" class="attr-name">Email:</label>
+              <input formControlName="email_id" type="email" id="email" name="email" required>
+              <div *ngIf="doctorForm.controls['email_id'].invalid && doctorForm.controls['email_id'].touched || doctorForm.controls['email_id'].errors?.['pattern']" class="alert alert-danger">
+                Email ID should be of the form abc@abc.com
+              </div>
+            </div>
+            <div>
+              <label for="dob" class="attr-name">Date of birth:</label>
+              <input formControlName="dob" type="date" id="dob" name="dob" required>
+              <div *ngIf="doctorForm.controls['dob'].invalid && doctorForm.controls['dob'].touched" class="alert alert-danger">
+                Date of birth should be entered.
+              </div>
+            </div>
+            <div>
+              <label for="gender" class="attr-name">Gender:</label>
+              <select formControlName="gender" id="gender" name="gender" required>
+                <option value="">Select gender</option>
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+                <option value="other">Other</option>
+              </select>
+              <div *ngIf="doctorForm.controls['gender'].invalid && doctorForm.controls['gender'].touched" class="alert alert-danger">
+                Gender should be entered
+              </div>
+            </div>
+            <div>
+              <label for="department" class="attr-name">Department name:</label>
+              <input formControlName="dept_name" type="text" id="department" name="department" required>
+              <div *ngIf="doctorForm.controls['dept_name'].invalid && doctorForm.controls['dept_name'].touched || doctorForm.controls['dept_name'].errors?.['pattern']" class="alert alert-danger">
+                Department Name should start with a capital letter
+              </div>
+            </div>
+            <div>
+              <label for="address" class="attr-name">Address:</label>
+              <textarea formControlName="clinic_address" id="address" name="address" required></textarea>
+              <div *ngIf="doctorForm.controls['clinic_address'].invalid && doctorForm.controls['clinic_address'].touched" class="alert alert-danger">
+                Clinic Address should be entered
+              </div>
+            </div>
+            <div>
+              <label for="qualification" class="attr-name">Qualification:</label>
+              <input formControlName="qualification" type="text" id="qualification" name="qualification" required>
+              <div *ngIf="doctorForm.controls['qualification'].invalid && doctorForm.controls['qualification'].touched" class="alert alert-danger">
+                Qualification should be entered
+              </div>
+            </div>
+            <div>
+              <label for="dob" class="attr-name">Job start date:</label>
+              <input formControlName="doctor_start_date" type="date" id="doctor_start_date" name="doctor_start_date" required>
+              <div *ngIf="doctorForm.controls['doctor_start_date'].invalid && doctorForm.controls['doctor_start_date'].touched" class="alert alert-danger">
+                Doctor Start Date should not be entered
+              </div>
+            </div>
+            <div style="margin-left: 1.5%;">
+              <label for="password" class="attr-name">Password:</label>
+              <input formControlName="password" style="margin-right: -10px;" type={{type}} id="password" name="password" required>
+              <span toggle="#password" class="field-icon toggle-password"><i class={{icon}} (click)="showpass()"></i></span>
+            </div>
+            <div *ngIf="doctorForm.controls['password'].invalid && doctorForm.controls['password'].touched" class="alert alert-danger">
+              Password should not be empty
+            </div>
+            <div class="add-admin-btn" style="padding: 0; text-align: center;">
+            <button class="btn btn-primary add-admin" type="submit">Add Doctor</button>
+            </div>
+        </form>
+
+    </div>
+    </mat-sidenav-content>
+  </mat-sidenav-container>    
+
+
+</body>
+</html>
