--- a/src/app/components/patient-dashboard/patient-dashboard.component.html
+++ b/src/app/components/patient-dashboard/patient-dashboard.component.html
@@ -16,76 +16,78 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <style>
-        .w3-sidenav w3-white w3-card-2{
-            background-color: black !important;
-        }
-    </style>
+
 </head>
-<body style="background-color:white" background="../../../assets/download.png" >
-    <header class="w3-container full-header">
-        <div class=" heading-div full-header">
-            <button class="btn btn-primary navbar" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">&#9776;</button>
-            <h2 class="web-name">HealthEconnect</h2>
-            <div  class="heading">{{patient_details.patientName}}</div>
-        </div>
-        
-    </header>
-    <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
-        <div class="offcanvas-header">
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-            <h3 style="width: auto; height:auto; margin-left: 15px; ">HealthEconnect</h3>
-        
-            <hr size="3px">
-            <a href="tryit.asp-filename=tryw3css_sidenav_over.html#" style=" margin-bottom: 15px;"> Home</a>
-            <br>		
-            <a href="tryit.asp-filename=tryw3css_sidenav_over.html#"  style=" margin-bottom: 15px;">Manage profiles</a>		
-            <br>
-            <a href="tryit.asp-filename=tryw3css_sidenav_over.html#"  style=" margin-bottom: 15px;">Dashboard</a>		
-            <br>
-            <a href="tryit.asp-filename=tryw3css_sidenav_over.html#"  style=" margin-bottom: 15px;">Appointments</a>		
-            <br>
-            <a href="tryit.asp-filename=tryw3css_sidenav_over.html#"  style=" margin-bottom: 15px;">SignOut</a>		
-        </div>
+<mat-toolbar class="mat-elevation-z8">
+    <button
+      mat-icon-button
+      *ngIf="sidenav.mode === 'over'"
+      (click)="sidenav.toggle()"
+    >
+      <mat-icon *ngIf="!sidenav.opened"> menu </mat-icon>
+      <mat-icon *ngIf="sidenav.opened"> close </mat-icon>
+    </button>
+    <a >HealthEconnect</a>
+    <p class="heading">{{patient_details.patientName}}</p>
+</mat-toolbar>
+  
+  <mat-sidenav-container>
+    <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
+      <img
+        class="avatar mat-elevation-z8"
+        src="../../../assets/cst.jpg"
+      />
+  
+      <h4 class="name">{{patient_details.patientName}}</h4>
+  
+      <mat-divider></mat-divider>
+      
+      <button mat-button class="menu-button" routerLink="/profiles">
+        <mat-icon>people</mat-icon>
+        <span>Profiles</span>
+      </button>
+      <button mat-button class="menu-button" routerLink="/patient-dashboard" routerLinkActive="active">
+        <mat-icon>dashboard</mat-icon>
+        <span>Dashboard</span>
+      </button>
+      <button mat-button class="menu-button" routerLink="/patient-prev-appointments">
+        <mat-icon>event</mat-icon>
+        <span>Appointments</span>
+      </button>
+
+      <button mat-button class="menu-button" (click)="logout()">
+        <mat-icon>exit_to_app</mat-icon>
+        <span>LogOut</span>
+      </button>
+
+    </mat-sidenav>
+    <mat-sidenav-content  style = "background: url('../../../assets/profiles3.webp')">
+      <div class="quote">
+        <h1>Welcome to HealthEconnect </h1>
+        <h3>Health is the greatest gift, contentment the greatest wealth, faithfulness the best relationship.</h3>
     </div>
 
-
-    <br>
-
-<div class="quote" style="color: white;">
-    <h1>Welcome to medical consultation </h1>
+    <div class="meet-divs">
+        <div class="appointment ">
+            <h3>New Appointment</h3>
+            <div class="meet-btn">
+                <button class="btn btn-primary btn-color">Continue</button>
+            </div>
         </div>
-
-<div>
-    <div class="appointment ">
-        <h5>New Appointment</h5>
-    
-        <button>Continue</button>
-    </div>
-    <div class="follow-up">
-        <h5>Follow-up Appointment</h5>
-    
-        <button>Continue</button>
+        <div class="follow-up">
+            <h3>Follow-up Appointment</h3>
+            <div class="meet-btn">
+                <button class="btn btn-primary btn-color" >Continue</button>
+            </div>
+        </div>
     </div>
     <div class="previous">
-        <h5>Follow-up Appointment</h5>
-    
-        <button>Continue</button>
+        <button class="btn btn-primary btn-color">Previous Appointments</button>
     </div>
-</div>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
 
-table{
-    width: 100%;
-    align-content: center;    
-}
-th,td{
-    padding: 10pxs;
-}
-</style>
 </body>
-
 
 </html>
 
