--- a/src/app/components/doctor-login/doctor-login.component.html
+++ b/src/app/components/doctor-login/doctor-login.component.html
@@ -5,7 +5,7 @@
  
     <head>
         <meta charset="utf-8">
-        <title>Login Doctor</title>
+        <title>doc login</title>
       
         <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
         <!-- Google fonts -->
