--- a/src/app/components/user-profiles/user-profiles.component.html
+++ b/src/app/components/user-profiles/user-profiles.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>user-profiles</title>  
+    <title>user-profile</title>  
 
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <!-- Google fonts -->
@@ -11,7 +11,7 @@
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <style>
         .w3-sidenav w3-white w3-card-2{
@@ -19,77 +19,85 @@
         }
     </style>
 </head>
-<body >
-
-    <header class="w3-container w3-teal">
-    <div>
-        <button class="btn btn-primary navbar" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">&#9776;</button>
-        <h2 class="web-name">HealthEconnect</h2>
-    </div>
-    
-    
-    <div  class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
-        <div class="offcanvas-header">
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-            <h3 style="width: auto; height:auto; margin-left: 15px; ">Health E connect</h3>
-        
-            <hr size="3px">
-            <a href="tryit.asp-filename=tryw3css_sidenav_over.html#" style=" margin-bottom: 15px;"> Home</a>
-            <br>		
-            <a href="tryit.asp-filename=tryw3css_sidenav_over.html#"  style=" margin-bottom: 15px;">Records</a>		
-            <br>
-            <a href="tryit.asp-filename=tryw3css_sidenav_over.html#"  style=" margin-bottom: 15px;">xxxx</a>		
-            <br>
-            <a href="tryit.asp-filename=tryw3css_sidenav_over.html#"  style=" margin-bottom: 15px;">xxxx</a>		
-            <br>
-            <a href="tryit.asp-filename=tryw3css_sidenav_over.html#"  style=" margin-bottom: 15px;">SignOut</a>		
-        </div>
-    </div>
-    
-    </header>
+<body background="../../../assets/profiles1.webp">
 
 
-    <h3 class="mobile">Ph.No:{{phone_number}}</h3>
-    <div *ngIf="showpin">
-    <div class="profiles">
-        <h2>Profiles</h2>
-        <div *ngFor="let profile of profile_lst; let i = index"  >
-            <div class="profile">
-                <img src="../../../assets/profile.png" alt="profile" class="profile-img">
-                <div class="name-div">
-                    <h5 class="name">{{profile.patientName}}</h5>
+
+    <mat-toolbar class="mat-elevation-z8">
+        <button
+          mat-icon-button
+          *ngIf="sidenav.mode === 'over'"
+          (click)="sidenav.toggle()"
+        >
+          <mat-icon *ngIf="!sidenav.opened"> menu </mat-icon>
+          <mat-icon *ngIf="sidenav.opened"> close </mat-icon>
+        </button>
+        <a >HealthEconnect</a>
+    </mat-toolbar>
+      
+      <mat-sidenav-container>
+        <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
+          <img
+            class="avatar mat-elevation-z8"
+            src="../../../assets/Patient.jpeg"
+          />
+      
+          <h4 class="name">{{phone_number}}</h4>
+      
+          <mat-divider></mat-divider>
+          
+          <button mat-button class="menu-button" routerLink="/profiles" routerLinkActive="active">
+            <mat-icon>people</mat-icon>
+            <span >Profiles</span>
+          </button>
+          <button mat-button class="menu-button" (click)="logout()">
+            <mat-icon>exit_to_app</mat-icon>
+            <span>LogOut</span>
+          </button>
+        </mat-sidenav>
+        <mat-sidenav-content  style = "background: url('../../../assets/profiles3.webp')">
+            <h3 class="mobile" style="color: black;">Ph.No: {{phone_number}}</h3>
+            <div *ngIf="showpin">
+                <div class="profiles">
+                    <h1>Profiles</h1>
+                    <div *ngFor="let profile of profile_lst; let i = index"  >
+                        <div class="profile">
+                            <img src="../../../assets/profile.png" alt="profile" class="profile-img">
+                            <div class="name-div" style="color: black;">
+                                <h1 class="name" >{{profile.patientName}}</h1>
+                                
+                            </div> 
+                            <div class="buttons">
+                                <button class="btn edit-btn" (click)="deleteProfile(profile.patientId)">Delete</button>
+                                <a class="redirect-btn" role="button" (click)="goTopatientDashboard(profile)"><img style="color: white;" src="../../../assets/redirect.png" alt="redirect" class="redirect"></a>
+                            </div>
+                            
+                        </div>
+                    </div>
                     
-                </div> 
-                <div class="buttons">
-                    <button class="btn edit-btn" (click)="deleteProfile(profile.patientId)">Delete</button>
-                    <a class="redirect-btn" role="button" (click)="goTopatientDashboard(profile)"><img src="../../../assets/redirect.png" alt="redirect" class="redirect"></a>
+                    <button class="btn select" onclick="window.location.href='/add-profile';">Add Profile</button>
+
                 </div>
+            </div>
+            <div  *ngIf="!showpin" style="  border-style:solid;   color: black; background-color:lightgray ;box-shadow: 5px 5px 5px 5px rgb(57, 55, 55); border-radius: 30px; margin-top: 15%; margin-left: 35%; width: 30%; padding: 5px 5px 5px 5px; padding-top: 1%; padding-bottom: 0%; padding-left: 0%;">
+                
+                <div class="callout" data-closable >
+                    <button (click)="closepopup()" style="border:2px; background-color : black; color: white; margin-top : 0%; margin-right: 0% ; margin-left: 2%" class="close-button" aria-label="Close alert" type="button" data-close>
+                        <i class="fa fa-close"></i>
+                    </button>
+                </div>
+
+                <label for="pin" style="margin-right: 1%; margin-left:8%">Enter your PIN:</label>
+                <input type={{type}} id="pin" name="pin"  pattern="[0-9]{4}" [(ngModel)]="pin" required>
+                <span toggle="#password" class="field-icon toggle-password"><i class={{icon}} (click)="showpass()"></i></span>
+            
+                <br>
+                <button type="submit" (click)="getuserpin()" style="  padding:8px 8px 8px 8px ;background-color : black; color: white; margin-top : 2%; margin-left: 45%; margin-bottom: 1%;">submit</button>
                 
             </div>
-        </div>
-        
-  
-        <button class="btn select" onclick="window.location.href='/add-profile';">Add Profile</button>
-
-    </div>
-</div>
-<div *ngIf="!showpin" style="border: 5px grey; background-color : rgb(102, 89, 89); color: white; margin-top: 15%; margin-left: 35%; width: 30%; padding: 5px 5px 5px 5px; padding-top: 5%; padding-bottom: 0%; padding-left: 0%;">
-   
-    <label for="pin" style="margin-right: 1%; margin-left:8%">Enter your PIN:</label>
-    <input type="password" id="pin" name="pin"  pattern="[0-9]{4}" [(ngModel)]="pin" required>
-   
-    <br>
-    <button type="submit" (click)="getuserpin()" style="border:2px; padding:8px 8px 8px 8px ; background-color : black; color: white; margin-top : 2%; margin-left: 45%;">submit</button>
- <div class="callout" data-closable style="margin-top : 0%">
-        <button (click)="closepopup()" style="border:2px; padding:8px 8px 8px 8px ; background-color : black; color: white; margin-top : 0%; margin-left: 0% ;" class="close-button" aria-label="Close alert" type="button" data-close>
-         close
-        </button>
-    </div>
-</div>
+        </mat-sidenav-content>
+      </mat-sidenav-container>
     
 
 </body>
 </html>
-
