--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,119 @@
-<p>admin-dashboard works!</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Admin dashboard</title>  
+
+    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;900&family=Ubuntu&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+    <style>
+        .w3-sidenav w3-white w3-card-2{
+            background-color: black !important;
+        }
+    </style>
+</head>
+<body>
+
+    
+    <mat-toolbar class="mat-elevation-z8">
+        <button
+          mat-icon-button
+          *ngIf="sidenav.mode === 'over'"
+          (click)="sidenav.toggle()"
+        >
+          <mat-icon *ngIf="!sidenav.opened"> menu </mat-icon>
+          <mat-icon *ngIf="sidenav.opened"> close </mat-icon>
+        </button>
+        <a >HealthEconnect</a>
+        <p class="heading">{{admin_details.adminName}}</p>
+    </mat-toolbar>
+      
+    <mat-sidenav-container>
+      <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
+        <img
+          class="avatar mat-elevation-z8"
+          src="../../../assets/Patient.jpeg"
+        />
+    
+        <h4 class="name">{{admin_details.adminName}}</h4>
+    
+        <mat-divider></mat-divider>
+        
+        <button mat-button class="menu-button" routerLink="/admin-dashboard" routerLinkActive="active">
+          <mat-icon>dashboard</mat-icon>
+          <span>Dashboard</span>
+        </button>
+        <button mat-button class="menu-button" routerLink="/view-doctors">
+          <mat-icon>medical_services</mat-icon>
+          <span>Manage Doctors</span>
+        </button>
+        <button mat-button class="menu-button" routerLink="/view-admins">
+          <mat-icon>admin_panel_settings</mat-icon>
+          <span>Manage Admins</span>
+        </button>
+        <button mat-button class="menu-button" routerLink="/statistics">
+          <mat-icon>insert_chart_outlined</mat-icon>
+          <span>Statistics</span>
+        </button>
+        
+        <mat-divider></mat-divider>
+        
+        <button mat-button class="menu-button" (click)="logout()">
+          <mat-icon>exit_to_app</mat-icon>
+          <span>LogOut</span>
+        </button>
+      </mat-sidenav>
+      <mat-sidenav-content  style = "background: url('../../../assets/profiles3.webp')">
+          <div class="page">
+
+              <div class="statistics">
+                  <h1 class="stat-name">Statistics</h1>
+                  <div class="list">
+                      <div class="stat">
+                          <h2>No. of patients consulted</h2>
+                          <h2 class="value">0</h2>
+                      </div>
+                      <div class="stat">
+                          <h2>No. of Doctors Present</h2>
+                          <h2 class="value">0</h2>
+                      </div>
+                  </div>
+                  
+                  
+              </div>
+              
+              <div class="doc-admin">
+                  <div class="list">
+                      <div class="manage">
+                          <button type="button" class="btn" onclick="location.href='/view-doctors'"><img src="../../../assets/download.png" alt="Doctor" class="images"></button>
+                          <br>
+                          <h3 class="add-del">Add/ Delete Doctors</h3>
+                      </div>
+                      <div class="manage">
+                          <button type="button" class="btn" onclick="location.href='/view-admins'"><img src="../../../assets/admin.jpeg" alt="Admin" class="images"></button>
+                          <br>
+                          <h3 class="add-del">Add/ Delete Admins</h3>
+                      </div>
+                  </div>
+                  
+              </div>
+      
+          </div>
+      </mat-sidenav-content>
+    </mat-sidenav-container>
+    
+
+    
+
+
+</body>
+</html>
