--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -4,14 +4,19 @@
     <title>Admin dashboard</title>  
 
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+    <link rel="stylesheet" href="http://example.com/custom-style.css">
+    <link rel="stylesheet" href="http://anotherexample.com/extra-style.css">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;900&family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@300&display=swap" rel="stylesheet">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link rel="stylesheet" href="http://example.com/more-styles.css">
+    <link rel="stylesheet" href="http://example.com/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
@@ -41,7 +46,7 @@
       <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
         <img
           class="avatar mat-elevation-z8"
-          src="../../../assets/Patient.jpeg"
+          src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn-icons-png.flaticon.com%2F512%2F2304%2F2304226.png&tbnid=LZk5dbwIspAbdM&vet=12ahUKEwjeqcP0po2CAxX_18kDHeUpDqQQMygDegQIARB9..i&imgrefurl=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fadmin_2304226&docid=MPecgjYIogc5eM&w=512&h=512&q=admin%20icon&ved=2ahUKEwjeqcP0po2CAxX_18kDHeUpDqQQMygDegQIARB9"
         />
     
         <h4 class="name">{{admin_details.adminName}}</h4>
@@ -56,7 +61,7 @@
           <mat-icon>medical_services</mat-icon>
           <span>Manage Doctors</span>
         </button>
-        <button mat-button class="menu-button" routerLink="/view-admins">
+        <button mat-button class="menu-button ">
           <mat-icon>admin_panel_settings</mat-icon>
           <span>Manage Admins</span>
         </button>
@@ -116,4 +121,7 @@
 
 
 </body>
-</html>
+</html> 
+   
+ 
+ 
