--- a/src/app/components/user-profiles/user-profiles.component.html
+++ b/src/app/components/user-profiles/user-profiles.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>user-profile</title>  
+    <title>Admin dashboard</title>  
 
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <!-- Google fonts -->
@@ -100,4 +100,4 @@
     
 
 </body>
-</html>
+</html> 
