--- a/src/app/components/user-select/user-select.component.html
+++ b/src/app/components/user-select/user-select.component.html
@@ -25,17 +25,17 @@
     <div class="user-selection">
         <h3>Select a User</h3>
         <div class="manage">
-            <button type="button" class="btn" onclick="location.href='/Doctor'"><img src="../../../assets/download.png" alt="Doctor" class="images"></button>
+            <button type="button" class="btn" onclick="location.href='/Doctor'"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fdoctor_3774299&psig=AOvVaw1vDZlFZrfaBBPaCmZIzyTm&ust=1698189373600000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCKDZl8WmjYIDFQAAAAAdAAAAABAE"  class="images"></button>
             <br>
             <h5 class="add-del">Doctor</h5>
         </div>
         <div class="manage">
-            <button type="button" class="btn" onclick="location.href='/Patient'"><img src="../../../assets/cst.jpg" alt="Admin" class="images"></button>
+            <button type="button" class="btn" onclick="location.href='/Patient'"><img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fstatic.vecteezy.com%2Fsystem%2Fresources%2Fpreviews%2F027%2F622%2F261%2Foriginal%2Fpatient-icon-health-insurance-icon-isolated-on-white-background-vector.jpg&tbnid=nMMqxf-6HLZUCM&vet=12ahUKEwiN3I7jpo2CAxUOI94AHW6KCpsQMygFegUIARCBAQ..i&imgrefurl=https%3A%2F%2Fwww.vecteezy.com%2Fvector-art%2F27622261-patient-icon-health-insurance-vector-icon-isolated-on-white-background&docid=vvvhiHGbOekWAM&w=1920&h=1920&q=patient%20icon&ved=2ahUKEwiN3I7jpo2CAxUOI94AHW6KCpsQMygFegUIARCBAQ"  class="images"></button>
             <br>
             <h5 class="add-del">Patient</h5>
         </div>
         <div class="manage">
-            <button type="button" class="btn" onclick="location.href='/admin'"><img src="../../../assets/admin.jpeg" alt="Admin" class="images"></button>
+            <button type="button" class="btn" onclick="location.href='/Admin'"><img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn-icons-png.flaticon.com%2F512%2F2304%2F2304226.png&tbnid=LZk5dbwIspAbdM&vet=12ahUKEwjeqcP0po2CAxX_18kDHeUpDqQQMygDegQIARB9..i&imgrefurl=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fadmin_2304226&docid=MPecgjYIogc5eM&w=512&h=512&q=admin%20icon&ved=2ahUKEwjeqcP0po2CAxX_18kDHeUpDqQQMygDegQIARB9"class="images"></button>
             <br>
             <h5 class="add-del">Admin</h5>
         </div>
