--- a/src/app/components/admin-login/admin-login.component.css
+++ b/src/app/components/admin-login/admin-login.component.css
@@ -37,8 +37,8 @@ button {
 .field-icon {
     float: right;
     margin-right: 10px;
+	margin-right: 10px;
     margin-top: -9%;
-    position: relative;
     z-index: 2;
 }
 
