--- a/src/app/components/doctor-dashboard/doctor-dashboard.component.html
+++ b/src/app/components/doctor-dashboard/doctor-dashboard.component.html
@@ -40,7 +40,7 @@
     <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
       <img
         class="avatar mat-elevation-z8"
-        src="../../../assets/Doctor.jpeg"
+        src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fdoctor_3774299&psig=AOvVaw1vDZlFZrfaBBPaCmZIzyTm&ust=1698189373600000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCKDZl8WmjYIDFQAAAAAdAAAAABAE"
       />
   
       <h4 class="name">{{doctor_details.doctorName}}</h4>
