--- a/src/app/components/doctor-login/doctor-login.component.css
+++ b/src/app/components/doctor-login/doctor-login.component.css
@@ -12,18 +12,21 @@ body{
         .navbar-custom .navbar-text,  .navbar-custom .nav-link{
             color: white;
             font-size: 25px;
-			margin-left: 1%;
+			margin-left: 3%;
 }
 
+
 input[type="password"],
-input[type="email"],input[type="text"] {
+input[type="email"],input[type="text"]
+{
 	padding: 10px ;
-	border: 1px solid #ccc ;
+	box-sizing: content-box; 
+	border: 1px solid #ccc ;  
 	border-radius: 4px ;
-	box-sizing: border-box ;
-	margin-bottom: 20px ;
-	width: 100% ;
+	margin-bottom: 20px ;  
+	width: 150px;
 }
+
 
 button {
 	background-color: #4CAF50 ;
@@ -63,21 +66,24 @@ button {
 button:hover {
     background-color: #45a049 ;
 }
-    
+
+
 .form-container {
-	margin-top: 50px ;
-	max-width: 500px ;
-	margin-left: auto ;
-	margin-right: auto ;
-	padding: 20px ;
-	border-radius: 5px ;
-    background-color: rgb(220, 237, 254);
+	font-family: 'Merriweather', serif;
+	margin-top: 50px;
+	max-width: 500px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 20px;
+	border-radius: 5px;
 	border-color: #271212;
+    background-color: rgb(220, 237, 254);
     border-style:solid ;
     border-width: 1px;
    
     box-shadow: 5px 5px 5px 5px rgb(57, 55, 55);
 }
+
 
 .form-title {
 	font-family: 'Merriweather', serif;
@@ -86,8 +92,15 @@ button:hover {
 	margin-bottom: 30px ;
 }
 
-.list{
+.full-header{
+	background-color: #434547;
 	text-align: center;
+	font-size: 20px;
+	padding-bottom: 2%;
+	padding-top: 1%;
 }
 
-	
+.submit{
+	text-align: center;
+	margin: 0 auto;
+}
