--- a/src/app/components/doctor-login/doctor-login.component.html
+++ b/src/app/components/doctor-login/doctor-login.component.html
@@ -5,7 +5,7 @@
  
     <head>
         <meta charset="utf-8">
-        <title>doc login</title>
+        <title>Student Movement Management</title>
       
         <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
         <!-- Google fonts -->
@@ -15,24 +15,45 @@
       
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-      
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
         <!-- Bootstrap Scripts -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
       </head>  
-<body background="../../../assets/download.png" >   
-   <div>
-    <header class="w3-container full-header" >
-
-      <div  class="heading" style="margin-top: 0%; color: white;">Doctor login </div>
-    </header>
+<body background="../../../assets/profiles3.webp" >   
+  <nav class="navbar sticky-top navbar-expand-lg navbar-custom">
+    <a class="navbar-brand" href="#">HealthEconnect</a>
+  </nav> 
+  
+  <div>
 
     <div class="form-container" style="box-shadow: 10px;">
-        <h2 class="form-title">Login</h2>
-        <form >
-            <input type="email" placeholder="Enter email" name="username"  [(ngModel)]="model.username" />    
-            <input type="password" placeholder="Enter Password" name="password"  [(ngModel)]="model.password" />  
-            <button type="submit" class="login-btn" (click)="logindoctor()">Login</button>  
+        <h2 class="form-title">Doctor Login</h2>
+        <form  [formGroup]="myForm">
+            <input formControlName="username" type="email" placeholder="Enter email" name="username"  [(ngModel)]="model.username" required/>    
+            
+            <input formControlName="password" type={{type}} placeholder="Enter Password" name="password"  [(ngModel)]="model.password" required/>
+            <span toggle="password" class="field-icon toggle-password"><i class={{icon}} (click)="showpass()"></i></span>
+            
+            <div *ngIf="myForm.controls['username'].invalid && myForm.controls['username'].touched && myForm.controls['username'].errors?.['required']" class="alert alert-danger">
+              Email is required.
+            </div>
+
+            <div *ngIf="myForm.controls['username'].invalid && myForm.controls['username'].touched && myForm.controls['username'].errors?.['pattern']" class="alert alert-danger">
+              Email Pattern not matched Make sure it is of form "abc@abc.abc"
+            </div>
+
+            <div *ngIf="myForm.controls['password'].invalid && myForm.controls['password'].touched" class="alert alert-danger">
+              <div *ngIf="myForm.controls['password'].errors?.['required']">
+              Password is required.
+              </div>
+            </div>
+            
+            <div class="submit">
+              <button type="submit" class="login-btn" (click)="logindoctor()">Login</button>
+            </div> 
         </form>
 
         
