--- a/src/app/components/patient-dashboard/patient-dashboard.component.html
+++ b/src/app/components/patient-dashboard/patient-dashboard.component.html
@@ -16,78 +16,80 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-
 </head>
-<mat-toolbar class="mat-elevation-z8">
-    <button
-      mat-icon-button
-      *ngIf="sidenav.mode === 'over'"
-      (click)="sidenav.toggle()"
-    >
-      <mat-icon *ngIf="!sidenav.opened"> menu </mat-icon>
-      <mat-icon *ngIf="sidenav.opened"> close </mat-icon>
-    </button>
-    <a >HealthEconnect</a>
-    <p class="heading">{{patient_details.patientName}}</p>
-</mat-toolbar>
-  
-  <mat-sidenav-container>
-    <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
-      <img
-        class="avatar mat-elevation-z8"
-        src="../../../assets/cst.jpg"
-      />
-  
-      <h4 class="name">{{patient_details.patientName}}</h4>
-  
-      <mat-divider></mat-divider>
+<body>
+
+        
+    <mat-toolbar class="mat-elevation-z8">
+        <button
+          mat-icon-button
+          *ngIf="sidenav.mode === 'over'"
+          (click)="sidenav.toggle()"
+        >
+          <mat-icon *ngIf="!sidenav.opened"> menu </mat-icon>
+          <mat-icon *ngIf="sidenav.opened"> close </mat-icon>
+        </button>
+        <a >HealthEconnect</a>
+        <p class="heading">{{patient_details.patientName}}</p>
+    </mat-toolbar>
       
-      <button mat-button class="menu-button" routerLink="/profiles">
-        <mat-icon>people</mat-icon>
-        <span>Profiles</span>
-      </button>
-      <button mat-button class="menu-button" routerLink="/patient-dashboard" routerLinkActive="active">
-        <mat-icon>dashboard</mat-icon>
-        <span>Dashboard</span>
-      </button>
-      <button mat-button class="menu-button" routerLink="/patient-prev-appointments">
-        <mat-icon>event</mat-icon>
-        <span>Appointments</span>
-      </button>
+      <mat-sidenav-container>
+        <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
+          <img
+            class="avatar mat-elevation-z8"
+            src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fstatic.vecteezy.com%2Fsystem%2Fresources%2Fpreviews%2F027%2F622%2F261%2Foriginal%2Fpatient-icon-health-insurance-icon-isolated-on-white-background-vector.jpg&tbnid=nMMqxf-6HLZUCM&vet=12ahUKEwiN3I7jpo2CAxUOI94AHW6KCpsQMygFegUIARCBAQ..i&imgrefurl=https%3A%2F%2Fwww.vecteezy.com%2Fvector-art%2F27622261-patient-icon-health-insurance-vector-icon-isolated-on-white-background&docid=vvvhiHGbOekWAM&w=1920&h=1920&q=patient%20icon&ved=2ahUKEwiN3I7jpo2CAxUOI94AHW6KCpsQMygFegUIARCBAQ"
+          />
+      
+          <h4 class="name">{{patient_details.patientName}}</h4>
+      
+          <mat-divider></mat-divider>
+          
+          <button mat-button class="menu-button" routerLink="/profiles">
+            <mat-icon>people</mat-icon>
+            <span>Profiles</span>
+          </button>
+          <button mat-button class="menu-button" routerLink="/patient-dashboard" routerLinkActive="active">
+            <mat-icon>dashboard</mat-icon>
+            <span>Dashboard</span>
+          </button>
+          <button mat-button class="menu-button" routerLink="/patient-prev-appointments">
+            <mat-icon>event</mat-icon>
+            <span>Appointments</span>
+          </button>
 
-      <button mat-button class="menu-button" (click)="logout()">
-        <mat-icon>exit_to_app</mat-icon>
-        <span>LogOut</span>
-      </button>
+          <button mat-button class="menu-button" (click)="logout()">
+            <mat-icon>exit_to_app</mat-icon>
+            <span>LogOut</span>
+          </button>
 
-    </mat-sidenav>
-    <mat-sidenav-content  style = "background: url('../../../assets/profiles3.webp')">
-      <div class="quote">
-        <h1>Welcome to HealthEconnect </h1>
-        <h3>Health is the greatest gift, contentment the greatest wealth, faithfulness the best relationship.</h3>
-    </div>
-
-    <div class="meet-divs">
-        <div class="appointment ">
-            <h3>New Appointment</h3>
-            <div class="meet-btn">
-                <button class="btn btn-primary btn-color">Continue</button>
+        </mat-sidenav>
+        <mat-sidenav-content  style = "background: url('../../../assets/profiles3.webp')">
+          <div class="quote">
+            <h1>Welcome to HealthEconnect </h1>
+            <h3>Health is the greatest gift, contentment the greatest wealth, faithfulness the best relationship.</h3>
+        </div>
+    
+        <div class="meet-divs">
+            <div class="appointment ">
+                <h3>New Appointment</h3>
+                <div class="meet-btn">
+                    <button class="btn btn-primary btn-color">Continue</button>
+                </div>
+            </div>
+            <div class="follow-up">
+                <h3>Follow-up Appointment</h3>
+                <div class="meet-btn">
+                    <button class="btn btn-primary btn-color" >Continue</button>
+                </div>
             </div>
         </div>
-        <div class="follow-up">
-            <h3>Follow-up Appointment</h3>
-            <div class="meet-btn">
-                <button class="btn btn-primary btn-color" >Continue</button>
-            </div>
+        <div class="previous">
+            <button class="btn btn-primary btn-color">Previous Appointments</button>
         </div>
-    </div>
-    <div class="previous">
-        <button class="btn btn-primary btn-color">Previous Appointments</button>
-    </div>
-    </mat-sidenav-content>
-  </mat-sidenav-container>
-
+        </mat-sidenav-content>
+      </mat-sidenav-container>
+    
 </body>
 
-</html>
 
+</html>
